# dj-llm

./: .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
django_llm/: __init__.py  admin.py  apps.py  chat.py  configuration.py  exceptions.py  logging.py  message.py  models.py  pricing.py  retry.py  schema.py  tool.py
django_llm/migrations/: 0001_initial.py  0002_conversation_name_user.py  __init__.py
django_llm/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  google.py  ollama.py  openai.py  registry.py
example_project/: __init__.py  settings.py
tests/: __init__.py  test_azure_openai.py  test_chat.py  test_configuration.py  test_integration.py  test_logging.py  test_message.py  test_ollama.py  test_persistence.py  test_pricing.py  test_providers.py  test_retry.py  test_schema.py  test_tool.py
tests/cassettes/: anthropic_basic_chat.yaml  anthropic_streaming.yaml  anthropic_tool_calling.yaml  anthropic_with_system.yaml  google_basic_chat.yaml  google_streaming.yaml  google_tool_calling.yaml  google_with_system.yaml  openai_async_basic.yaml  openai_async_stream.yaml  openai_basic_chat.yaml  openai_multi_turn.yaml  openai_streaming.yaml  openai_structured_output.yaml  openai_structured_output_list.yaml  openai_tokens.yaml  openai_tool_calling.yaml  openai_with_system.yaml
